--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
 		"express": "latest",
 		"jade": "latest",
 		"socket.io": "latest"
-	}
+	},
+	"engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
+  }
 }
